# garagem3info3

./: db.sqlite3  manage.py  pyproject.toml
core/: serializers.py
core/migrations/: 0001_initial.py
garagem/: asgi.py  settings.py
